2006-03-24  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/features.doc: Statistics classes and functions moved
	from signal-processing to base math module.

	* itpp/sources.mk: Added missing "itpp/itsignal.h" file.
	
	* itpp/srccode/lpcfunc.cpp, itpp/signal/fastica.cpp: Fixed
	improper include statements after moving signal-processing related
	classes and functions to a separate subdirectory.

	* config/acx_blas.m4: Removed unnecessary check for "libblas",
	beside "libf77blas" in ATLAS detection routines. This fixes a
	configuration problem in the case when both the ATLAS and NetLib's
	blas libraries are installed.

2006-03-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: Changed CBLAS and LAPACK library detection order
	due to linking problems under Cygwin.

2006-03-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* AUTHORS: Andy Panov included in a list of contributors.

	* itpp/base/stat.h, tests/stat_test.cpp, tests/stat_test.ref:
	Added templated Histogram class provided by Andy Panov. This closes
	feature request [1451288].

	* Moved signal processing related sources to a separate "signal"
	subdirectory. Test programs updated accordingly. Please note that
	now <itpp/itbase.h> is not included automatically in "itcomm.h",
	"itfixed.h", "itprotocol.h", "itsignal.h" and "itsrccode.h".

2006-03-20  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, doc/Makefile.am, itpp/Makefile.am,
	itpp/signal/Makefile.am, itpp/signal/sources.mk: Added signal
	subdirectory and modified make files for a new signal processing
	module.

2006-03-19  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: Version numbers updated.

	* Renamed `fixedpoint' subdirectory into `fixed'. 

	* doc/local/index.doc.in: Changed CVS related links to SVN ones
	(merged rev. 361:372 from itpp-3-10 branch).

2006-03-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* CVS->SVN repository conversion.
