@@ -40,24 +40,24 @@
 namespace itpp {
 
   /*!
-    \brief Generate gray code of blocklength m.
-    \ingroup miscfunc
+    \brief Generate Gray code of blocklength m.
+    \ingroup misccommfunc
 
     The codes are contained as binary codewords {0,1} in the rows of the 
-		returned matrix.
+    returned matrix.
     See also the \c gray() function in \c math/scalfunc.h.
   */
   bmat graycode(int m);
 
   /*! 
     \brief Calculate the Hamming distance between \a a and \a b
-    \ingroup miscfunc
+    \ingroup misccommfunc
   */
   int hamming_distance(const bvec &a, const bvec &b);
 
   /*! 
     \brief Calculate the Hamming weight of \a a
-    \ingroup miscfunc
+    \ingroup misccommfunc
   */
   int weight(const bvec &a);
 
