@@ -86,10 +86,11 @@ namespace itpp {
     
     How to include the support for fixed-point data types in your program:
     \code
-    #include <itfixed.h>
+    #include <itpp/itbase.h>
+    #include <itpp/itfixed.h>
+
+    using namespace itpp;
     \endcode
-    
-    \note itbase.h is automatically included by itfixed.h.
     
     Fixed-point data types in IT++:
     <ul>
